--- a/otimizacao.ipynb
+++ b/otimizacao.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "4          2913.0             1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,6 +154,86 @@
     "\n",
     "dados = pd.read_csv(\"https://3070-classificacao-otimizacao.s3.us-east-2.amazonaws.com/dados_inadimplencia.csv\")\n",
     "dados.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14578 entries, 0 to 14577\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   receita_cliente      14578 non-null  float64\n",
+      " 1   anuidade_emprestimo  14578 non-null  float64\n",
+      " 2   anos_casa_propria    14578 non-null  float64\n",
+      " 3   telefone_trab        14578 non-null  int64  \n",
+      " 4   avaliacao_cidade     14578 non-null  float64\n",
+      " 5   score_1              14578 non-null  float64\n",
+      " 6   score_2              14578 non-null  float64\n",
+      " 7   score_3              14578 non-null  float64\n",
+      " 8   score_social         14578 non-null  float64\n",
+      " 9   troca_telefone       14578 non-null  float64\n",
+      " 10  inadimplente         14578 non-null  int64  \n",
+      "dtypes: float64(9), int64(2)\n",
+      "memory usage: 1.2 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inadimplente\n",
+       "0    67.649883\n",
+       "1    32.350117\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados[\"inadimplente\"].value_counts(normalize=True)*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dividindo os dados em treino e teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "SEED = 42\n",
+    "\n",
+    "x = dados.drop(columns=[\"inadimplente\"])\n",
+    "y = dados[\"inadimplente\"]\n",
+    "\n",
+    "x_treino, y_treino, x_teste, y_teste = train_test_split(x, y, test_size=0.33, stratify=y)"
    ]
   },
   {
