adicionado dicionário de dados

--- a/otimizacao.ipynb
+++ b/otimizacao.ipynb
@@ -4,6 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dicionário de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- '**receita_cliente**': Renda do cliente em R$\n",
+    "- '**anuidade_emprestimo**': Valor anual da taxa de juros do empréstimo em $\n",
+    "- '**anos_casa_propria**': Idade da propriedade do cliente em anos\n",
+    "- '**telefone_trab**': Acessibilidade do número de telefone comercial (1 indica Sim e 0 indica Não)\n",
+    "- '**avaliacao_cidade**': Classificação da cidade do cliente: 3 para excelente, 2 para bom e 1 para médio.\n",
+    "- '**score_1**': Pontuação originada de uma fonte externa. Este é um escore normalizado.\n",
+    "- '**score_2**': Pontuação originada de uma fonte externa. Este é um escore normalizado.\n",
+    "- '**score_3**': Pontuação originada de uma fonte externa. Este é um escore normalizado.\n",
+    "- '**score_social**': Quantidade de amigos/familiares do cliente que não cumpriram com pagamentos de empréstimos nos últimos 60 dias.\n",
+    "- '**troca_telefone**': Quantidade de dias antes do pedido de empréstimo em que o cliente mudou seu número de telefone.\n",
+    "- '**inadimplente**': 1 indica que o cliente não honrou com o pagamento do empréstimo, e 0 indica o contrário."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Carregando os dados"
    ]
   },
