criando os modelos

--- a/otimizacao.ipynb
+++ b/otimizacao.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4          2913.0             1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,10 +254,64 @@
     "\n",
     "SEED = 42\n",
     "\n",
-    "x = dados.drop(columns=[\"inadimplente\"])\n",
+    "x = dados.drop(\"inadimplente\", axis=1)\n",
     "y = dados[\"inadimplente\"]\n",
     "\n",
-    "x_treino, y_treino, x_teste, y_teste = train_test_split(x, y, test_size=0.33, stratify=y)"
+    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.33, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criando os modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Decision Tree: 0.14331619537275064\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import recall_score\n",
+    "\n",
+    "modelo_decision_tree = DecisionTreeClassifier(max_depth=3, random_state=SEED)\n",
+    "modelo_decision_tree.fit(x_treino, y_treino)\n",
+    "y_pred = modelo_decision_tree.predict(x_teste)\n",
+    "print(f\"Recall Decision Tree: {recall_score(y_teste, y_pred)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Logistic Regression: 0.22879177377892032\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "regression_pipeline = make_pipeline(StandardScaler(), LogisticRegression())\n",
+    "regression_pipeline.fit(x_treino, y_treino)\n",
+    "y_pred = regression_pipeline.predict(x_teste)\n",
+    "print(f\"Recall Logistic Regression: {recall_score(y_teste, y_pred)}\")"
    ]
   },
   {
