--- a/otimizacao.ipynb
+++ b/otimizacao.ipynb
@@ -13723,6 +13723,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validação Cruzada Aninhada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "inner_cv = StratifiedKFold(shuffle=True, random_state=SEED)\n",
+    "outer_cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=SEED)\n",
+    "decision_tree = DecisionTreeClassifier(max_depth=3, random_state=SEED)\n",
+    "\n",
+    "tree_nested_cv = GridSearchCV(\n",
+    "    decision_tree, param_grid=param_grid_dt, cv=inner_cv, scoring=\"recall\", n_jobs=-1)\n",
+    "\n",
+    "tree_nested_cv_results = cross_val_score(tree_nested_cv, x_treino, y_treino, cv=outer_cv)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média do Recall: 0.26740471638215685\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Média do Recall: {tree_nested_cv_results.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média do Recall: 0.26297803991246965\n"
+     ]
+    }
+   ],
+   "source": [
+    "inner_cv = StratifiedKFold(shuffle=True, random_state=SEED)\n",
+    "outer_cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=SEED)\n",
+    "regression_pipeline = make_pipeline(StandardScaler(), LogisticRegression())\n",
+    "\n",
+    "regression_nested_cv = GridSearchCV(\n",
+    "    regression_pipeline, param_grid=param_grid_regression, cv=inner_cv, scoring=\"recall\", n_jobs=-1)\n",
+    "\n",
+    "regression_nested_cv_results = cross_val_score(regression_nested_cv, x_treino, y_treino, cv=outer_cv)\n",
+    "\n",
+    "print(f\"Média do Recall: {regression_nested_cv_results.mean()}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
