Implementando validação cruzada aninhada randomizada em ambos modelos

--- a/otimizacao.ipynb
+++ b/otimizacao.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dicionário de dados"
+    "## Dicionário de dados\n"
    ]
   },
   {
@@ -21,14 +21,14 @@
     "- '**score_3**': Pontuação originada de uma fonte externa. Este é um escore normalizado.\n",
     "- '**score_social**': Quantidade de amigos/familiares do cliente que não cumpriram com pagamentos de empréstimos nos últimos 60 dias.\n",
     "- '**troca_telefone**': Quantidade de dias antes do pedido de empréstimo em que o cliente mudou seu número de telefone.\n",
-    "- '**inadimplente**': 1 indica que o cliente não honrou com o pagamento do empréstimo, e 0 indica o contrário."
+    "- '**inadimplente**': 1 indica que o cliente não honrou com o pagamento do empréstimo, e 0 indica o contrário.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Carregando os dados"
+    "## Carregando os dados\n"
    ]
   },
   {
@@ -176,7 +176,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dados = pd.read_csv(\"https://3070-classificacao-otimizacao.s3.us-east-2.amazonaws.com/dados_inadimplencia.csv\")\n",
+    "dados = pd.read_csv(\n",
+    "    \"https://3070-classificacao-otimizacao.s3.us-east-2.amazonaws.com/dados_inadimplencia.csv\"\n",
+    ")\n",
     "dados.head()"
    ]
   },
@@ -234,14 +236,14 @@
     }
    ],
    "source": [
-    "dados[\"inadimplente\"].value_counts(normalize=True)*100"
+    "dados[\"inadimplente\"].value_counts(normalize=True) * 100"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dividindo os dados em treino e teste"
+    "## Dividindo os dados em treino e teste\n"
    ]
   },
   {
@@ -257,14 +259,16 @@
     "x = dados.drop(\"inadimplente\", axis=1)\n",
     "y = dados[\"inadimplente\"]\n",
     "\n",
-    "x_treino, x_teste, y_treino, y_teste = train_test_split(x, y, test_size=0.33, stratify=y)"
+    "x_treino, x_teste, y_treino, y_teste = train_test_split(\n",
+    "    x, y, test_size=0.33, stratify=y\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Criando os modelos"
+    "## Criando os modelos\n"
    ]
   },
   {
@@ -318,14 +322,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GridSearchCV"
+    "## GridSearchCV\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree"
+    "### Decision Tree\n"
    ]
   },
   {
@@ -783,12 +787,12 @@
     "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
     "\n",
     "param_grid_dt = {\n",
-    "    'criterion':  ['gini', 'entropy'],\n",
-    "    'max_depth': np.linspace(6, 12, 4, dtype=int),\n",
-    "    'min_samples_split': np.linspace(5, 20, 4, dtype=int),\n",
-    "    'min_samples_leaf': np.linspace(5, 20, 4, dtype=int),\n",
-    "    'max_features': ['sqrt', 'log2'],\n",
-    "    'splitter': ['best', 'random']\n",
+    "    \"criterion\": [\"gini\", \"entropy\"],\n",
+    "    \"max_depth\": np.linspace(6, 12, 4, dtype=int),\n",
+    "    \"min_samples_split\": np.linspace(5, 20, 4, dtype=int),\n",
+    "    \"min_samples_leaf\": np.linspace(5, 20, 4, dtype=int),\n",
+    "    \"max_features\": [\"sqrt\", \"log2\"],\n",
+    "    \"splitter\": [\"best\", \"random\"],\n",
     "}\n",
     "\n",
     "\n",
@@ -796,7 +800,8 @@
     "cv = StratifiedKFold(shuffle=True, random_state=SEED)\n",
     "\n",
     "tree_search_cv = GridSearchCV(\n",
-    "    decision_tree, param_grid=param_grid_dt, cv=cv, scoring=\"recall\", n_jobs=-1)\n",
+    "    decision_tree, param_grid=param_grid_dt, cv=cv, scoring=\"recall\", n_jobs=-1\n",
+    ")\n",
     "\n",
     "tree_search_cv.fit(x_treino, y_treino)"
    ]
@@ -1029,7 +1034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Análise visual"
+    "### Análise visual\n"
    ]
   },
   {
@@ -2941,7 +2946,12 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "px.scatter(df_tree_search_cv, x=\"param_max_depth\", y=\"mean_test_score\", title=\"Max Depth vs. Recall\")"
+    "px.scatter(\n",
+    "    df_tree_search_cv,\n",
+    "    x=\"param_max_depth\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Max Depth vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -4851,7 +4861,12 @@
     }
    ],
    "source": [
-    "px.scatter(df_tree_search_cv, x=\"param_criterion\", y=\"mean_test_score\", title=\"Criterion vs. Recall\")"
+    "px.scatter(\n",
+    "    df_tree_search_cv,\n",
+    "    x=\"param_criterion\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Criterion vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -6761,7 +6776,12 @@
     }
    ],
    "source": [
-    "px.scatter(df_tree_search_cv, x=\"param_max_features\", y=\"mean_test_score\", title=\"Max Features vs. Recall\")"
+    "px.scatter(\n",
+    "    df_tree_search_cv,\n",
+    "    x=\"param_max_features\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Max Features vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -8671,14 +8691,19 @@
     }
    ],
    "source": [
-    "px.scatter(df_tree_search_cv, x=\"param_min_samples_split\", y=\"mean_test_score\", title=\"Min. Samples Split vs. Recall\")"
+    "px.scatter(\n",
+    "    df_tree_search_cv,\n",
+    "    x=\"param_min_samples_split\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Min. Samples Split vs. Recall\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logistic Regression"
+    "### Logistic Regression\n"
    ]
   },
   {
@@ -9149,19 +9174,28 @@
     "c = [0.001, 0.01, 0.1, 1, 10]\n",
     "\n",
     "param_grid_regression = [\n",
-    "    {'logisticregression__solver' : ['newton-cg', 'lbfgs'],\n",
-    "      'logisticregression__penalty' : ['l2'],\n",
-    "      'logisticregression__max_iter' : max_iter,\n",
-    "       'logisticregression__C' : c},\n",
-    "    {'logisticregression__solver' : ['liblinear'],\n",
-    "      'logisticregression__penalty' : ['l1', 'l2'],\n",
-    "      'logisticregression__max_iter' : max_iter,\n",
-    "      'logisticregression__C' : c},\n",
+    "    {\n",
+    "        \"logisticregression__solver\": [\"newton-cg\", \"lbfgs\"],\n",
+    "        \"logisticregression__penalty\": [\"l2\"],\n",
+    "        \"logisticregression__max_iter\": max_iter,\n",
+    "        \"logisticregression__C\": c,\n",
+    "    },\n",
+    "    {\n",
+    "        \"logisticregression__solver\": [\"liblinear\"],\n",
+    "        \"logisticregression__penalty\": [\"l1\", \"l2\"],\n",
+    "        \"logisticregression__max_iter\": max_iter,\n",
+    "        \"logisticregression__C\": c,\n",
+    "    },\n",
     "]\n",
     "\n",
     "regression_pipeline = make_pipeline(StandardScaler(), LogisticRegression())\n",
     "regression_search_cv = GridSearchCV(\n",
-    "    regression_pipeline, param_grid=param_grid_regression, cv=cv, scoring=\"recall\", n_jobs=-1)\n",
+    "    regression_pipeline,\n",
+    "    param_grid=param_grid_regression,\n",
+    "    cv=cv,\n",
+    "    scoring=\"recall\",\n",
+    "    n_jobs=-1,\n",
+    ")\n",
     "\n",
     "regression_search_cv.fit(x_treino, y_treino)"
    ]
@@ -10461,7 +10495,12 @@
     }
    ],
    "source": [
-    "px.scatter(df_regression_search_cv, x=\"param_logisticregression__max_iter\", y=\"mean_test_score\", title=\"Max Iter. vs. Recall\")"
+    "px.scatter(\n",
+    "    df_regression_search_cv,\n",
+    "    x=\"param_logisticregression__max_iter\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Max Iter. vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -11547,7 +11586,12 @@
     }
    ],
    "source": [
-    "px.scatter(df_regression_search_cv, x=\"param_logisticregression__C\", y=\"mean_test_score\", title=\"C vs. Recall\")"
+    "px.scatter(\n",
+    "    df_regression_search_cv,\n",
+    "    x=\"param_logisticregression__C\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"C vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -12633,7 +12677,12 @@
     }
    ],
    "source": [
-    "px.scatter(df_regression_search_cv, x=\"param_logisticregression__solver\", y=\"mean_test_score\", title=\"Solver vs. Recall\")"
+    "px.scatter(\n",
+    "    df_regression_search_cv,\n",
+    "    x=\"param_logisticregression__solver\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Solver vs. Recall\",\n",
+    ")"
    ]
   },
   {
@@ -13719,21 +13768,26 @@
     }
    ],
    "source": [
-    "px.scatter(df_regression_search_cv, x=\"param_logisticregression__penalty\", y=\"mean_test_score\", title=\"Penalty vs. Recall\")"
+    "px.scatter(\n",
+    "    df_regression_search_cv,\n",
+    "    x=\"param_logisticregression__penalty\",\n",
+    "    y=\"mean_test_score\",\n",
+    "    title=\"Penalty vs. Recall\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validação Cruzada Aninhada"
+    "## Validação Cruzada Aninhada\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree"
+    "### Decision Tree\n"
    ]
   },
   {
@@ -13749,9 +13803,12 @@
     "decision_tree = DecisionTreeClassifier(max_depth=3, random_state=SEED)\n",
     "\n",
     "tree_nested_cv = GridSearchCV(\n",
-    "    decision_tree, param_grid=param_grid_dt, cv=inner_cv, scoring=\"recall\", n_jobs=-1)\n",
+    "    decision_tree, param_grid=param_grid_dt, cv=inner_cv, scoring=\"recall\", n_jobs=-1\n",
+    ")\n",
     "\n",
-    "tree_nested_cv_results = cross_val_score(tree_nested_cv, x_treino, y_treino, cv=outer_cv)\n"
+    "tree_nested_cv_results = cross_val_score(\n",
+    "    tree_nested_cv, x_treino, y_treino, cv=outer_cv\n",
+    ")"
    ]
   },
   {
@@ -13775,7 +13832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logistic Regression"
+    "### Logistic Regression\n"
    ]
   },
   {
@@ -13797,11 +13854,151 @@
     "regression_pipeline = make_pipeline(StandardScaler(), LogisticRegression())\n",
     "\n",
     "regression_nested_cv = GridSearchCV(\n",
-    "    regression_pipeline, param_grid=param_grid_regression, cv=inner_cv, scoring=\"recall\", n_jobs=-1)\n",
+    "    regression_pipeline,\n",
+    "    param_grid=param_grid_regression,\n",
+    "    cv=inner_cv,\n",
+    "    scoring=\"recall\",\n",
+    "    n_jobs=-1,\n",
+    ")\n",
     "\n",
-    "regression_nested_cv_results = cross_val_score(regression_nested_cv, x_treino, y_treino, cv=outer_cv)\n",
+    "regression_nested_cv_results = cross_val_score(\n",
+    "    regression_nested_cv, x_treino, y_treino, cv=outer_cv\n",
+    ")\n",
     "\n",
     "print(f\"Média do Recall: {regression_nested_cv_results.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RandomizedSearchCV Aninhado\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média do Recall: 0.255692149114034\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "tree_nested_rcv = RandomizedSearchCV(\n",
+    "    decision_tree,\n",
+    "    n_iter=100,\n",
+    "    param_distributions=param_grid_dt,\n",
+    "    cv=inner_cv,\n",
+    "    scoring=\"recall\",\n",
+    "    n_jobs=-1,\n",
+    "    random_state=SEED,\n",
+    ")\n",
+    "\n",
+    "tree_nested_rcv_results = cross_val_score(\n",
+    "    tree_nested_rcv, x_treino, y_treino, cv=outer_cv\n",
+    ")\n",
+    "print(f\"Média do Recall: {tree_nested_rcv_results.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'splitter': 'best',\n",
+       " 'min_samples_split': 10,\n",
+       " 'min_samples_leaf': 5,\n",
+       " 'max_features': 'log2',\n",
+       " 'max_depth': 12,\n",
+       " 'criterion': 'entropy'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_nested_rcv.fit(x_treino, y_treino)\n",
+    "tree_nested_rcv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média do Recall: 0.255692149114034\n"
+     ]
+    }
+   ],
+   "source": [
+    "regression_nested_rcv = RandomizedSearchCV(\n",
+    "    regression_pipeline,\n",
+    "    n_iter=50,\n",
+    "    param_distributions=param_grid_regression,\n",
+    "    cv=inner_cv,\n",
+    "    scoring=\"recall\",\n",
+    "    n_jobs=-1,\n",
+    "    random_state=SEED,\n",
+    ")\n",
+    "\n",
+    "regression_nested_rcv_results = cross_val_score(\n",
+    "    regression_nested_rcv, x_treino, y_treino, cv=outer_cv\n",
+    ")\n",
+    "print(f\"Média do Recall: {tree_nested_rcv_results.mean()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'logisticregression__solver': 'liblinear',\n",
+       " 'logisticregression__penalty': 'l2',\n",
+       " 'logisticregression__max_iter': 150,\n",
+       " 'logisticregression__C': 0.001}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regression_nested_rcv.fit(x_treino, y_treino)\n",
+    "regression_nested_rcv.best_params_"
    ]
   },
   {
